OESE-293 fix certifications accordion overlapping with map legend on tablet

--- a/css/nalrc.css
+++ b/css/nalrc.css
@@ -642,7 +642,7 @@ font-size:12px; background:#ffffff; border-bottom-left-radius: 8px; border-botto
 		flex-basis: 75%;
 	}
 	.nalrc-slider #oese-acf-slider { height:100%; }
-	.certification-map-legend { margin-left:0; margin-top:0; }
+	.certification-map-legend { margin-left:0; margin-top:-30px; }
 	.nalrc-details figure.wp-block-image:not(.wp-block){
 		max-height: 130px;
     	overflow: hidden;
